#6 Redesign of the overview page for a group: - Changed the display name for several progress statusses for readability purposes - Fixed a bug where it was not possible to see the student details when no progress was yet made - Added a sortable date last spoken column, which can be sorted on oldest first, where Inactive and stopped students are placed in the bottom - Removed the timeline, this is still visible for individual students - For the last feedback also show the feeling (as smiley) and type (as text)

--- a/StudentProgress.Web/wwwroot/css/group.css
+++ b/StudentProgress.Web/wwwroot/css/group.css
@@ -11,6 +11,15 @@
     min-width: 150px;
 }
 
+.student-status .last-spoken-date .last-progress-status {
+    min-width: 100px;
+}
+
+.last-progress-feeling {
+    min-width: 50px;
+    text-align: center;
+}
+
 .name-edit {
     visibility: hidden;
     cursor: pointer;
